--- a/i18n/zh-TW.yaml
+++ b/i18n/zh-TW.yaml
@@ -15,8 +15,8 @@ article:
     one: "{{ .Count }} 字"
     other: "{{ .Count }} 字"
   part_of_series: "系列文"
-  part: "#"
-  this_article: "[本文]"
+  part: ""
+  this_article: "ᐅ"
   related_articles: "相關文章"
 
 author:
