--- a/i18n/zh-TW.yaml
+++ b/i18n/zh-TW.yaml
@@ -16,7 +16,7 @@ article:
     other: "{{ .Count }} 字"
   part_of_series: "系列文"
   part: ""
-  this_article: "⤵"
+  this_article: "➫"
   related_articles: "相關文章"
 
 author:
